buildscript {
	ext {
		springBootVersion = '2.7.15'
		set('springCloudVersion', "2021.0.8")
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

plugins {
	id 'org.springframework.boot' version '2.7.15'
	id 'io.spring.dependency-management' version '1.1.3'
	id "org.sonarqube" version "4.3.1.3277"
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'jacoco'

//added to accept systemproperties while executing gradlew test cmd
test {
	systemProperties = System.properties
}

bootJar {
	archiveBaseName = 'SCSB-UI'
	archiveVersion = '0.0.1-SNAPSHOT'
	// layered()
}
sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

repositories {
	mavenCentral()
}


dependencies {
	implementation fileTree(dir: '/data/commonjar', include: '*2.5.jar')
	implementation 'org.springframework.cloud:spring-cloud-starter-config'
	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
	implementation group: 'org.json', name: 'json', version: '20230618'
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'

	implementation('commons-beanutils:commons-beanutils:1.9.4')
	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
	implementation("org.springframework.boot:spring-boot-starter-data-rest")
	implementation('org.springframework.boot:spring-boot-starter-web-services')
	implementation('org.springframework.boot:spring-boot-starter-security')
	implementation('org.springframework.security:spring-security-jwt')
	implementation('org.springframework.security:spring-security-cas')
	implementation('org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.6.8')
	implementation('org.springframework.security.oauth:spring-security-oauth2:2.5.2.RELEASE')
	implementation('org.springframework.security:spring-security-oauth2-client:5.7.6')
	implementation('org.springframework.data:spring-data-solr:4.3.15')
			{exclude module: 'solr-solrj'; exclude module: 'solr-data-commons'; exclude module: 'spring-data-jpa'}
	implementation('org.codehaus.jettison:jettison:1.5.4')
	implementation('org.springframework.data:spring-data-commons')
	implementation('org.springframework.data:spring-data-jpa')
	implementation('com.google.guava:guava:31.1-jre') {exclude module: "solr-solrj"}
	implementation('org.apache.solr:solr-solrj:8.11.2')
	implementation('info.freelibrary:freelib-marc4j:2.6.12')
	implementation(group: 'net.sourceforge.javacsv', name: 'javacsv', version: '2.0')
	implementation('io.springfox:springfox-swagger2:3.0.0')
	implementation('org.apache.shiro:shiro-core:1.5.2')
	implementation('javax.validation:validation-api:2.0.1.Final')
	implementation('org.projectlombok:lombok:1.18.28')
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
	implementation 'org.springframework.amqp:spring-rabbit'
	implementation 'net.logstash.logback:logstash-logback-encoder:7.3'
	annotationProcessor('org.projectlombok:lombok:1.18.32')
	testImplementation('org.projectlombok:lombok:1.18.32')
	testAnnotationProcessor('org.projectlombok:lombok:1.18.32')
	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.32'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mockito:mockito-core:5.23.0'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:6.1.0'
		testRuntimeOnly 'org.junit.platform:junit-platform-launcher:6.1.0'
	testImplementation 'net.bytebuddy:byte-buddy:1.17.7'
	testImplementation 'net.bytebuddy:byte-buddy-agent:1.17.7'

}

configurations.all {
	resolutionStrategy.eachDependency { DependencyResolveDetails details ->
		if (details.requested.group == 'org.apache.logging.log4j') {
			details.useVersion '3.0.0-alpha1'
		}
		if (details.requested.group == 'org.junit.platform') {
			details.useVersion '6.1.0'
		}
		if (details.requested.group == 'org.junit.jupiter') {
			details.useVersion '6.1.0'
		}
	}
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

jacocoTestReport {
	dependsOn test // tests are required to run before generating the report
}

test {
	jacoco {
		destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
		classDumpDir = file("$buildDir/jacoco/classpathdumps")
	}
}

test{
	useJUnitPlatform()
	jvmArgs "-Dnet.bytebuddy.experimental=true"
}

jacocoTestReport {
	reports {
		xml.required = true
		csv.required = false
		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
	}
}

jacoco {
	toolVersion = "0.8.10"
	reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
}

task scsbUiJavadocs(type: Javadoc) {
	source = sourceSets.main.java
	classpath = configurations.implementation
	options.addStringOption('Xdoclint:none', '-quiet')
	String home = System.getProperty("user.home");
	destinationDir =  new File(home+"/scsb-javadocs/scsb-ui");

}

sonarqube {
	properties {
		property "systemProp.sonar.host.url", ""
		property "systemProp.sonar.jdbc.url", ""
		property "systemProp.sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
		property "sonar.projectName", "scsb-ui-service"
		property "systemProp.sonar.jdbc.username", ""
		property "systemProp.sonar.jdbc.password", ""
	}
}

jar {
	enabled = false
	archiveClassifier = '' //use empty string
}

test {
	forkEvery = 1
}
